# kb-ai-assment-generation

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  flatten_csv_v2.py  pyproject.toml
scripts/: verify_env.py
src/assessment/: api.py  config.py  db.py  exporters.py  fetcher.py  generator.py
src/assessment/resources/: prompts.yaml  schemas.json
ui/: Dockerfile  app.py  requirements.txt
